fix: resolve Safari aspect-ratio layout issues

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,5 @@
 :host {
     position: relative;
     display: block;
-    width: 100vw; height: 100lvh;
+    width: 100vw; height: 100dvh;
 }
