--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -14,6 +14,8 @@ $spacing-2: 1.25rem;
     padding: $spacing-1;
     &.settings {
         top: 0; right: 0;
+        width: 4.4rem; height: 4.4rem;
+        aspect-ratio: 1 / 1;
         z-index: 100;
     }
     &.trademark {
@@ -22,7 +24,7 @@ $spacing-2: 1.25rem;
         color: var( --line-grayscale );
     }
     &.mobile {
-        padding: $spacing-2;
+        padding: 0.5rem;
     }
 }
 main {
@@ -65,6 +67,10 @@ main {
         display: flex;
         width: 100%; height: 5.5rem;
         gap: $spacing-1;
+    }
+
+    @media ( max-width: 768px ) {
+        padding-bottom: 2rem;
     }
 }
 
